Treat empty login_screen_input_methods policy as no-op

If an empty login_screen_input_methods policy is sent from the client,
treat it as if the policy was not present. Don't restrict input methods
in this case.

BUG=750572
TEST=browser_tests --gtest_filter=LoginScreenPolicyTest.*

Change-Id: I83109bb5c7648ac6a7f81da414879745bf905abb
Reviewed-on: https://chromium-review.googlesource.com/589436
Reviewed-by: Alexander Alekseev <alemate@chromium.org>
Commit-Queue: Pavol Marko <pmarko@chromium.org>
Cr-Commit-Position: refs/heads/master@{#491380}
Former-commit-id: 9988a1bb6a0df58747556caa319c4d3019a72418