chrome/browser/chromeos/login/login_screen_policy_browsertest.cc
@@ -105,6 +105,29 @@ IN_PROC_BROWSER_TEST_F(LoginScreenPolicyTest, RestrictInputMethods) {
   ASSERT_EQ(0U, imm->GetActiveIMEState()->GetAllowedInputMethods().size());
 }
 
+IN_PROC_BROWSER_TEST_F(LoginScreenPolicyTest, PolicyInputMethodsListEmpty) {
+  content::WindowedNotificationObserver(
+      chrome::NOTIFICATION_LOGIN_OR_LOCK_WEBUI_VISIBLE,
+      content::NotificationService::AllSources())
+      .Wait();
+
+  input_method::InputMethodManager* imm =
+      input_method::InputMethodManager::Get();
+  ASSERT_TRUE(imm);
+
+  ASSERT_EQ(0U, imm->GetActiveIMEState()->GetAllowedInputMethods().size());
+
+  em::ChromeDeviceSettingsProto& proto(device_policy()->payload());
+  proto.mutable_login_screen_input_methods()->Clear();
+  EXPECT_TRUE(proto.has_login_screen_input_methods());
+  EXPECT_EQ(
+      0, proto.login_screen_input_methods().login_screen_input_methods_size());
+  RefreshDevicePolicyAndWaitForSettingChange(
+      chromeos::kDeviceLoginScreenInputMethods);
+
+  ASSERT_EQ(0U, imm->GetActiveIMEState()->GetAllowedInputMethods().size());
+}
+
 class LoginScreenLocalePolicyTest : public LoginScreenPolicyTest {
  protected:
   LoginScreenLocalePolicyTest() {}
